api: Add ability to insert & remove node neighbor
This functionality is useful when running in LB-only mode
(`--datapath-mode=lb-only`) because it doesn't run with K8s. This means
that there is no mechanism to discover nodes.

Therefore, this commit allows the operator to add or remove nodes from a
load-balancing cluster.
