# api/v1/models/node_neigh_request.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright 2017-2020 Authors of Cilium
+// SPDX-License-Identifier: Apache-2.0
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// NodeNeighRequest Structure which contains the elements for manipulating node neighbors
+//
+//
+// swagger:model NodeNeighRequest
+type NodeNeighRequest struct {
+
+	// Node identity of the node that's the neighbor
+	ID int64 `json:"id,omitempty"`
+
+	// Node IP address of the node that's the neighbor
+	IP string `json:"ip,omitempty"`
+}
+
+// Validate validates this node neigh request
+func (m *NodeNeighRequest) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *NodeNeighRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *NodeNeighRequest) UnmarshalBinary(b []byte) error {
+	var res NodeNeighRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
